# budget-tracker

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/hooks/: check_code_quality_python.sh
.claude/thoughts/plans/: 2025-10-10-bank-statement-normalizer-cli.md
.claude/thoughts/research/: 2025-10-14-general-codebase-functions.md
.claude/thoughts/thoughts/: app_idea.md
config/: bank_mappings.json  categories.yaml
config/banks/: danske_bank.yaml
scripts/: check_quality.sh  test_google_auth.py
src/budget_tracker/analytics/: __init__.py  engine.py  models.py
src/budget_tracker/categorizer/: llm_categorizer.py
src/budget_tracker/cli/: blacklist.py  confirmation.py  main.py  mapping.py  period_selection.py  selection.py  transfer_confirmation.py
src/budget_tracker/clients/: __init__.py  google_sheets.py
tests/fixtures/: sample_bank1.csv  sample_bank2.csv  sample_danske_bank.csv  sample_nordea.csv
tests/integration/: __init__.py  test_cli.py  test_cli_sheets.py  test_end_to_end.py
tests/tui/: test_categorization.py  test_export.py  test_file_selection.py  test_home_screen.py  test_period_selection.py  test_secondary_screens.py  test_transfer_review.py
tests/unit/: test_analytics_engine.py  test_blacklist_cli.py  test_budget_service.py  test_categorizer.py  test_category_cache.py  test_confirmation.py  test_currency_converter.py  test_excel_exporter.py  test_exporter.py  test_google_sheets_analytics.py  test_google_sheets_client.py  test_google_sheets_exporter.py  test_mapping.py  test_models.py  test_normalizer.py  test_parser.py  test_period_selection.py  test_selection.py  test_terminal_renderer.py  test_transaction.py  test_transfer_confirmation.py  test_transfer_detector.py
(+55 files in other folders)
