[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "budget-tracker"
version = "0.1.0"
description = "CLI tool to standardize bank statements with local LLM categorization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer[all]>=0.12.0",
    "pandas>=2.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "ollama>=0.3.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "gspread>=6.2.1",
    "questionary>=2.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.2.0",
    "types-pyyaml>=6.0.12",
    "ty>=0.0.8",
]

[project.scripts]
budget-tracker = "budget_tracker.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "G", "PIE", "PYI", "Q", "SIM", "TCH", "ARG", "PTH", "PD", "PL", "RUF"]
ignore = ["PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "ollama.*"
ignore_missing_imports = true
